--- a/css/main.css
+++ b/css/main.css
@@ -1260,6 +1260,15 @@ body.js-lightbox-active {
     .bg-left {
       background-position: left;
       background-size: contain; } }
+  .bg-left.js-panel {
+    height: 0;
+    -webkit-transition: 0.3s ease-out;
+    transition: 0.3s ease-out; }
+    @media screen and (min-width: 900px) {
+      .bg-left.js-panel {
+        height: 100vh !important; } }
+    .bg-left.js-panel.is-active {
+      height: 100vh; }
 
 .bg-right {
   background: url("../images/right.png");
@@ -1271,10 +1280,20 @@ body.js-lightbox-active {
     .bg-right {
       background-position: right;
       background-size: contain; } }
+  .bg-right.js-panel {
+    height: 0;
+    -webkit-transition: height 0.3s ease-out;
+    transition: height 0.3s ease-out; }
+    @media screen and (min-width: 900px) {
+      .bg-right.js-panel {
+        height: 100vh !important; } }
+    .bg-right.js-panel.is-active {
+      height: 100vh;
+      margin-top: -3.75rem; }
 
 .character-list-wrapper {
   background-color: rgba(0, 0, 0, 0.5);
-  padding: 1.25rem;
+  padding: 1.25rem 1.875rem;
   height: 100%;
   max-height: 100%;
   overflow: hidden; }
@@ -1284,7 +1303,7 @@ body.js-lightbox-active {
       padding-right: 2.8125rem; }
     .character-list-wrapper .search-wrapper .search-label {
       position: absolute;
-      top: 0.5rem;
+      top: 0.625rem;
       right: 0;
       font-size: 1.875rem;
       padding-right: 0.3125rem;
@@ -1295,7 +1314,7 @@ body.js-lightbox-active {
     height: 100%; }
     .character-list-wrapper .character-list .list {
       margin: 0;
-      padding: 0;
+      padding: 0 0 11.25rem;
       list-style: none;
       color: #ffffff;
       font-weight: 400; }
@@ -1312,7 +1331,7 @@ body.js-lightbox-active {
           position: absolute;
           bottom: 0;
           left: 0;
-          border-radius: 1.25rem;
+          border-radius: 0.125rem;
           -webkit-transition: 0.08s ease-out;
           transition: 0.08s ease-out; }
         .character-list-wrapper .character-list .list .list-item::before {
@@ -1323,17 +1342,63 @@ body.js-lightbox-active {
           background-color: rgba(255, 255, 255, 0.1);
           position: absolute;
           bottom: 1px;
-          left: 3rem;
+          left: 3.5rem;
           border-radius: 1.25rem;
-          -webkit-transition: 0.08s ease-out;
-          transition: 0.08s ease-out; }
+          -webkit-transition: 0.3s ease-out;
+          transition: 0.3s ease-out; }
         .character-list-wrapper .character-list .list .list-item:hover::after {
           background-color: rgba(210, 210, 210, 0.5); }
         .character-list-wrapper .character-list .list .list-item:hover::before {
           width: 83%;
-          -webkit-box-shadow: 2px 0 9px 3px rgba(83, 228, 68, 0.65);
-          box-shadow: 2px 0 9px 3px rgba(83, 228, 68, 0.65);
+          -webkit-box-shadow: 2px 0 9px 3px rgba(177, 10, 0, 0.75);
+          box-shadow: 2px 0 9px 3px rgba(177, 10, 0, 0.75);
           background-color: rgba(255, 255, 255, 0.8); }
+
+.content-wrapper {
+  position: relative; }
+  .content-wrapper .close-icon {
+    position: absolute;
+    top: 0;
+    right: -1.25rem; }
+    .content-wrapper .close-icon .toggle-icon {
+      display: block;
+      position: relative;
+      width: 100%;
+      -webkit-transition: margin 600ms;
+      transition: margin 600ms;
+      cursor: pointer; }
+      .content-wrapper .close-icon .toggle-icon .bar {
+        display: block;
+        width: 3.8em;
+        height: 0.2em;
+        margin: 0.9em;
+        border-right: 2.8em solid #fff;
+        border-left: 0.6em solid #d6d6d6;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+        -webkit-transition-property: -webkit-transform, margin, border-right-color, box-shadow;
+        -webkit-transition-property: margin, border-right-color, -webkit-transform, -webkit-box-shadow;
+        transition-property: margin, border-right-color, -webkit-transform, -webkit-box-shadow;
+        transition-property: transform, margin, border-right-color, box-shadow;
+        transition-property: transform, margin, border-right-color, box-shadow, -webkit-transform, -webkit-box-shadow;
+        -webkit-transition-duration: 600ms;
+        transition-duration: 600ms; }
+        .content-wrapper .close-icon .toggle-icon .bar:nth-of-type(1) {
+          margin-left: 1.4em;
+          -webkit-transform: rotate(-137deg) translateY(-1.5em);
+          transform: rotate(-137deg) translateY(-1.5em); }
+        .content-wrapper .close-icon .toggle-icon .bar:nth-of-type(2) {
+          margin-left: 0.5em;
+          -webkit-transform: rotate(-42deg);
+          transform: rotate(-42deg); }
+      .content-wrapper .close-icon .toggle-icon:hover .bar:nth-of-type(1) {
+        border-right-color: #e9b8b9;
+        -webkit-box-shadow: 0.4em 0 0.6em 0.1em rgba(205, 40, 44, 0.75);
+        box-shadow: 0.4em 0 0.6em 0.1em rgba(205, 40, 44, 0.75); }
+      .content-wrapper .close-icon .toggle-icon:hover .bar:nth-of-type(2) {
+        border-right-color: #ddf1da;
+        -webkit-box-shadow: 0.4em 0 0.6em 0.1em rgba(83, 228, 68, 0.65);
+        box-shadow: 0.4em 0 0.6em 0.1em rgba(83, 228, 68, 0.65); }
 
 .styleguide {
   margin: 5rem 0; }
