--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -14,6 +14,7 @@
 //Sections
 @import 'sections/split.scss';
 @import 'sections/characters.scss';
+@import 'sections/details.scss';
 @import 'sections/style-guide.scss';
 
 .bg-white {
