--- a/css/scss/sections/_characters.scss
+++ b/css/scss/sections/_characters.scss
@@ -1,6 +1,6 @@
 .character-list-wrapper {
 	background-color: rgba(set-color('black'), 0.5);
-	padding: rem-calc(20);
+	padding: rem-calc(20 30);
 	height: 100%;
 	max-height: 100%;
 	overflow: hidden;
@@ -14,7 +14,7 @@
 
 		.search-label {
 			position: absolute;
-			top: rem-calc(8);
+			top: rem-calc(10);
 			right: 0;
 			font-size: rem-calc(30);
 			padding-right: rem-calc(5);
@@ -29,7 +29,7 @@
 
 		.list {
 			margin: 0;
-			padding: 0;
+			padding: 0 0 rem-calc(180);
 			list-style: none;
 			color: set-color('white');
 			font-weight: 400;
@@ -48,7 +48,7 @@
 					position: absolute;
 					bottom: 0;
 					left: 0;
-					border-radius: rem-calc(20);
+					border-radius: rem-calc(2);
 					transition: 0.08s ease-out;
 				}
 
@@ -60,9 +60,9 @@
 					background-color: rgba(set-color('white'), 0.1);
 					position: absolute;
 					bottom: 1px;
-					left: rem-calc(48);
+					left: rem-calc(56);
 					border-radius: rem-calc(20);
-					transition: 0.08s ease-out;
+					transition: 0.3s ease-out;
 				}
 
 				&:hover {
@@ -73,7 +73,7 @@
 
 					&::before {
 						width: 83%;
-						box-shadow: 2px 0 9px 3px rgba(83, 228, 68, 0.65);
+						box-shadow: 2px 0 9px 3px rgba(177, 10, 0, 0.75);
 						background-color: rgba(set-color('white'), 0.8);
 					}
 				}
