--- a/css/scss/sections/_split.scss
+++ b/css/scss/sections/_split.scss
@@ -11,11 +11,11 @@
 
 	&.blur {
 		filter: url("data:image/svg+xml;utf9,<svg%20version='1.1'%20xmlns='http://www.w3.org/2000/svg'><filter%20id='blur'><feGaussianBlur%20stdDeviation='10'%20/></filter></svg>#blur");
-		-o-filter:blur(10px);
-		-ms-filter:blur(10px);
-		-moz-filter:blur(10px);
-		-webkit-filter:blur(10px);
-		filter:blur(10px);
+		-o-filter: blur(10px);
+		-ms-filter: blur(10px);
+		-moz-filter: blur(10px);
+		-webkit-filter: blur(10px);
+		filter: blur(10px);
 		overflow: hidden;
 		margin: -20px;
 		box-shadow: inset 0 0 0 3000px rgba(0, 0, 0, 0.5);
@@ -86,6 +86,19 @@
 		background-position: left;
 		background-size: contain;
 	}
+
+	&.js-panel {
+		height: 0;
+		transition: 0.3s ease-out;
+
+		@include breakpoint(large) {
+			height: 100vh !important;
+		}
+
+		&.is-active {
+			height: 100vh;
+		}
+	}
 }
 
 .bg-right {
@@ -98,5 +111,19 @@
 	@include breakpoint(large) {
 		background-position: right;
 		background-size: contain;
+	}
+
+	&.js-panel {
+		height: 0;
+		transition: height 0.3s ease-out;
+
+		@include breakpoint(large) {
+			height: 100vh !important;
+		}
+
+		&.is-active {
+			height: 100vh;
+			margin-top: rem-calc(-60);
+		}
 	}
 }
