--- a/css/scss/base/_global.scss
+++ b/css/scss/base/_global.scss
@@ -20,7 +20,7 @@ body {
     color: set-color('grey-700');
     font-family: $primary-font;
     font-size: rem-calc(16);
-    font-weight: 200;
+    font-weight: 300;
     -webkit-font-smoothing: antialiased;
 }
 
@@ -73,7 +73,7 @@ img {
 
 hr {
     margin-bottom: rem-calc(50);
-    border-width: 1px 0 0;
+    border-width: rem-calc(1) 0 0;
     border-color: rgba(set-color('white'), 0.2);
     width: rem-calc(200);
     color: set-color('grey-500');
