--- a/css/scss/sections/_details.scss
+++ b/css/scss/sections/_details.scss
@@ -5,6 +5,7 @@
 		position: absolute;
 		top: 0;
 		right: rem-calc(-20);
+		cursor: pointer;
 
 		.toggle-icon {
 			display: block;
@@ -18,50 +19,49 @@
 			.bar {
 				display: block;
 				width: 3.8em;
-				height: 0.2em;
+				height: rem-calc(4);
 				margin: 0.9em;
-				border-right: 2.8em solid #fff;
-				border-left: 0.6em solid #d6d6d6;
-				-webkit-box-sizing: border-box;
-				-moz-box-sizing: border-box;
+				border-radius: rem-calc(10);
+				border-right: 2.8em solid set-color('white');
+				border-left: 0.6em solid set-color('grey-300');
 				box-sizing: border-box;
-				-webkit-transition-property: -webkit-transform, margin, border-right-color, box-shadow;
-				-moz-transition-property: -moz-transform, margin, border-right-color, box-shadow;
 				transition-property: transform, margin, border-right-color, box-shadow;
-				-webkit-transition-duration: 600ms;
-				-moz-transition-duration: 600ms;
 				transition-duration: 600ms;
 
 				&:nth-of-type(1) {
 					margin-left: 1.4em;
-					-webkit-transform: rotate(-137deg) translateY(-1.5em);
-					-moz-transform: rotate(-137deg) translateY(-1.5em);
-					-ms-transform: rotate(-137deg) translateY(-1.5em);
-					-o-transform: rotate(-137deg) translateY(-1.5em);
-					transform: rotate(-137deg) translateY(-1.5em);
+					transform: rotate(-137deg) translateY(rem-calc(-24));
 				}
 
 				&:nth-of-type(2) {
 					margin-left: 0.5em;
-					-webkit-transform: rotate(-42deg);
-					-moz-transform: rotate(-42deg);
-					-ms-transform: rotate(-42deg);
-					-o-transform: rotate(-42deg);
-					transform: rotate(-42deg);
+					transform: rotate(-42deg) translateY(rem-calc(-2));
 				}
 
 			}
+		}
+	}
+	
+	.movie-info {
+		overflow-y: scroll;
+		height: 100%;
+		padding: rem-calc(0 20);
+		
+		.movie-title {
+			color: set-color('white');
+			text-transform: uppercase;
+			margin-bottom: 0;
+		}
 
-			&:hover {
-				.bar:nth-of-type(1) {
-					border-right-color: #e9b8b9;
-					box-shadow: 0.4em 0 0.6em 0.1em rgba(205,40,44,0.75);
-				}
-				.bar:nth-of-type(2) {
-					border-right-color: #ddf1da;
-					box-shadow: 0.4em 0 0.6em 0.1em rgba(83,228,68,0.65);
-				}
-			}
+		.movie-episode {
+			margin-bottom: rem-calc(15);
+		}
+
+		.movie-poster {
+			max-width: rem-calc(250);
+			margin: 0 auto;
+			display: block;
+			margin-bottom: rem-calc(15);
 		}
 	}
 }
