--- a/css/scss/sections/_split.scss
+++ b/css/scss/sections/_split.scss
@@ -11,14 +11,14 @@
 
 	&.blur {
 		filter: url("data:image/svg+xml;utf9,<svg%20version='1.1'%20xmlns='http://www.w3.org/2000/svg'><filter%20id='blur'><feGaussianBlur%20stdDeviation='10'%20/></filter></svg>#blur");
-		-o-filter: blur(10px);
-		-ms-filter: blur(10px);
-		-moz-filter: blur(10px);
-		-webkit-filter: blur(10px);
-		filter: blur(10px);
+		-o-filter: blur(rem-calc(10));
+		-ms-filter: blur(rem-calc(10));
+		-moz-filter: blur(rem-calc(10));
+		-webkit-filter: blur(rem-calc(10));
+		filter: blur(rem-calc(10));
 		overflow: hidden;
-		margin: -20px;
-		box-shadow: inset 0 0 0 3000px rgba(0, 0, 0, 0.5);
+		margin: rem-calc(-20);
+		box-shadow: inset 0 0 0 rem-calc(3000) rgba(set-color('black'), 0.5);
 	}
 
 	.fg-left,
@@ -37,6 +37,7 @@
 			top: 0;
 			height: 100%;
 			width: 100%;
+			color: set-color('white');
 
 			.content-wrapper-inner {
 				margin-bottom: rem-calc(20);
@@ -56,7 +57,8 @@
 	.fg-right {
 		border-top-right-radius: rem-calc(5);
 		border-bottom-right-radius: rem-calc(5);
-		box-shadow: 5px 0 20px 0 rgba(0, 0, 0, 0.2), 2px 5px 5px 0 rgba(0, 0, 0, 0.24);
+		box-shadow: rem-calc(5 0 20 0) rgba(set-color('black'), 0.2), rem-calc(2 5 5 0) rgba(set-color('black'), 0.24);
+
 
 		@include breakpoint(large) {
 			width: 0;
@@ -71,20 +73,20 @@
 	.fg-left {
 		border-top-left-radius: rem-calc(5);
 		border-bottom-left-radius: rem-calc(5);
-		box-shadow: -5px 0 20px 0 rgba(0, 0, 0, 0.2), -2px 5px 5px 0 rgba(0, 0, 0, 0.24);
+		box-shadow: rem-calc(-5 0 20 0) rgba(set-color('black'), 0.2), rem-calc(-2 5 5 0) rgba(set-color('black'), 0.24);
 	}
 }
 
 .bg-left {
-	background: url('#{$img-path}/left.png');
+	background: url('#{$img-path}/left.jpg');
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
 
-	@include breakpoint(large) {
+	@include breakpoint(xlarge) {
 		background-position: left;
-		background-size: contain;
+		background-size: 60%;
 	}
 
 	&.js-panel {
@@ -102,15 +104,15 @@
 }
 
 .bg-right {
-	background: url('#{$img-path}/right.png');
+	background: url('#{$img-path}/right.jpg');
 	background-size: cover;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-position: center;
 
-	@include breakpoint(large) {
+	@include breakpoint(xlarge) {
 		background-position: right;
-		background-size: contain;
+		background-size: 60%;
 	}
 
 	&.js-panel {
@@ -124,6 +126,10 @@
 		&.is-active {
 			height: 100vh;
 			margin-top: rem-calc(-60);
+
+			@include breakpoint(large) {
+				margin-top: 0;
+			}
 		}
 	}
 }
