--- a/css/main.css
+++ b/css/main.css
@@ -658,8 +658,8 @@ hr {
   -ms-flex-pack: center;
   justify-content: center;
   margin: 0 auto;
-  height: 100%;
-  width: 100%; }
+  width: 100%;
+  height: 100%; }
   .row.row-reverse {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -743,8 +743,8 @@ hr {
   justify-content: center; }
 
 .main-content {
-  overflow: hidden;
-  height: 100vh; }
+  height: 100vh;
+  overflow: hidden; }
 
 h1,
 h2,
@@ -875,10 +875,10 @@ select {
   transition: 0.3s ease-in-out;
   outline: 0;
   border: 0;
-  background: rgba(255, 255, 255, 0.8);
-  width: 100%;
-  padding: 0.9375rem;
   border-radius: 0.125rem;
+  background: rgba(255, 255, 255, 0.8);
+  padding: 0.9375rem;
+  width: 100%;
   max-width: 100%;
   vertical-align: middle;
   color: #3c3c3c;
@@ -887,8 +887,8 @@ select {
 
 .bg-left,
 .bg-right {
-  height: 100vh;
   padding: 1.875rem;
+  height: 100vh;
   overflow: hidden; }
   @media screen and (min-width: 900px) {
     .bg-left,
@@ -896,22 +896,19 @@ select {
       padding: 0; } }
   .bg-left.blur,
   .bg-right.blur {
-    filter: url("data:image/svg+xml;utf9,<svg%20version='1.1'%20xmlns='http://www.w3.org/2000/svg'><filter%20id='blur'><feGaussianBlur%20stdDeviation='10'%20/></filter></svg>#blur");
-    -o-filter: blur(0.625rem);
-    -ms-filter: blur(0.625rem);
-    -moz-filter: blur(0.625rem);
-    -webkit-filter: blur(0.625rem);
-    filter: blur(0.625rem);
-    overflow: hidden;
     margin: -1.25rem;
     -webkit-box-shadow: inset 0 0 0 187.5rem rgba(0, 0, 0, 0.5);
-    box-shadow: inset 0 0 0 187.5rem rgba(0, 0, 0, 0.5); }
+    box-shadow: inset 0 0 0 187.5rem rgba(0, 0, 0, 0.5);
+    overflow: hidden;
+    -ms-filter: blur(0.625rem);
+    -webkit-filter: blur(0.625rem);
+    filter: blur(0.625rem); }
   .bg-left .fg-left,
   .bg-left .fg-right,
   .bg-right .fg-left,
   .bg-right .fg-right {
-    height: 100%;
     position: relative;
+    height: 100%;
     overflow: hidden; }
     @media screen and (min-width: 900px) {
       .bg-left .fg-left,
@@ -923,27 +920,27 @@ select {
     .bg-left .fg-right .content-wrapper,
     .bg-right .fg-left .content-wrapper,
     .bg-right .fg-right .content-wrapper {
-      padding: 1.875rem 1.25rem;
       position: absolute;
       top: 0;
-      height: 100%;
+      padding: 1.875rem 1.25rem;
       width: 100%;
+      height: 100%;
       color: #ffffff; }
       .bg-left .fg-left .content-wrapper .content-wrapper-inner,
       .bg-left .fg-right .content-wrapper .content-wrapper-inner,
       .bg-right .fg-left .content-wrapper .content-wrapper-inner,
       .bg-right .fg-right .content-wrapper .content-wrapper-inner {
         margin-bottom: 1.25rem;
-        overflow: hidden;
-        height: 100%; }
+        height: 100%;
+        overflow: hidden; }
       .bg-left .fg-left .content-wrapper .logo,
       .bg-left .fg-right .content-wrapper .logo,
       .bg-right .fg-left .content-wrapper .logo,
       .bg-right .fg-right .content-wrapper .logo {
         display: block;
-        max-width: 12.5rem;
         margin: 0 auto;
-        margin-bottom: 1.875rem; }
+        margin-bottom: 1.875rem;
+        max-width: 12.5rem; }
   .bg-left .fg-right,
   .bg-right .fg-right {
     border-top-right-radius: 0.3125rem;
@@ -953,9 +950,9 @@ select {
     @media screen and (min-width: 900px) {
       .bg-left .fg-right,
       .bg-right .fg-right {
-        width: 0;
         -webkit-transition: 0.08s ease-out;
-        transition: 0.08s ease-out; }
+        transition: 0.08s ease-out;
+        width: 0; }
         .is-open .bg-left .fg-right, .is-open
         .bg-right .fg-right {
           width: 66.66667%; } }
@@ -977,9 +974,9 @@ select {
       background-position: left;
       background-size: 60%; } }
   .bg-left.js-panel {
-    height: 0;
     -webkit-transition: 0.3s ease-out;
-    transition: 0.3s ease-out; }
+    transition: 0.3s ease-out;
+    height: 0; }
     @media screen and (min-width: 900px) {
       .bg-left.js-panel {
         height: 100vh !important; } }
@@ -988,24 +985,24 @@ select {
 
 .bg-right {
   background: url("../images/right.jpg");
-  background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
-  background-position: center; }
+  background-position: center;
+  background-size: cover; }
   @media screen and (min-width: 1200px) {
     .bg-right {
       background-position: right;
       background-size: 60%; } }
   .bg-right.js-panel {
-    height: 0;
     -webkit-transition: height 0.3s ease-out;
-    transition: height 0.3s ease-out; }
+    transition: height 0.3s ease-out;
+    height: 0; }
     @media screen and (min-width: 900px) {
       .bg-right.js-panel {
         height: 100vh !important; } }
     .bg-right.js-panel.is-active {
-      height: 100vh;
-      margin-top: -3.75rem; }
+      margin-top: -3.75rem;
+      height: 100vh; }
       @media screen and (min-width: 900px) {
         .bg-right.js-panel.is-active {
           margin-top: 0; } }
@@ -1024,17 +1021,17 @@ select {
       position: absolute;
       top: 0.625rem;
       right: 0;
-      font-size: 1.875rem;
       padding-right: 0.3125rem;
-      color: #7e7e7e; }
+      color: #7e7e7e;
+      font-size: 1.875rem; }
   .character-list-wrapper .js-search-result {
     display: none; }
     .character-list-wrapper .js-search-result.active {
       display: block; }
   .character-list-wrapper .character-list {
     margin-top: 1.25rem;
-    overflow-y: scroll;
-    height: 100%; }
+    height: 100%;
+    overflow-y: scroll; }
     .character-list-wrapper .character-list .list {
       margin: 0;
       padding: 0 0 11.25rem;
@@ -1042,12 +1039,12 @@ select {
       color: #ffffff;
       font-weight: 400; }
       .character-list-wrapper .character-list .list .list-item {
-        padding: 0.625rem 0;
-        cursor: pointer;
         position: relative;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
         -webkit-transition: 0.2s ease-out;
-        transition: 0.2s ease-out; }
+        transition: 0.2s ease-out;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+        cursor: pointer;
+        padding: 0.625rem 0; }
         .character-list-wrapper .character-list .list .list-item a {
           display: block; }
         .character-list-wrapper .character-list .list .list-item:hover {
@@ -1065,292 +1062,38 @@ select {
     .content-wrapper .close-icon .toggle-icon {
       display: block;
       position: relative;
-      width: 100%;
-      -webkit-transition: margin 600ms;
-      transition: margin 600ms;
-      cursor: pointer; }
+      cursor: pointer;
+      width: 100%; }
       .content-wrapper .close-icon .toggle-icon .bar {
         display: block;
-        width: 3.8em;
-        height: 0.25rem;
-        margin: 0.9em;
-        border-radius: 0.625rem;
+        margin: 0.875rem;
         border-right: 2.8em solid #ffffff;
         border-left: 0.6em solid #d2d2d2;
+        border-radius: 0.625rem;
+        width: 3.8em;
+        height: 0.25rem;
         -webkit-box-sizing: border-box;
-        box-sizing: border-box;
-        -webkit-transition-property: margin, border-right-color, -webkit-transform, -webkit-box-shadow;
-        transition-property: margin, border-right-color, -webkit-transform, -webkit-box-shadow;
-        transition-property: transform, margin, border-right-color, box-shadow;
-        transition-property: transform, margin, border-right-color, box-shadow, -webkit-transform, -webkit-box-shadow;
-        -webkit-transition-duration: 600ms;
-        transition-duration: 600ms; }
+        box-sizing: border-box; }
         .content-wrapper .close-icon .toggle-icon .bar:nth-of-type(1) {
-          margin-left: 1.4em;
           -webkit-transform: rotate(-137deg) translateY(-1.5rem);
-          transform: rotate(-137deg) translateY(-1.5rem); }
+          transform: rotate(-137deg) translateY(-1.5rem);
+          margin-left: 1.375rem; }
         .content-wrapper .close-icon .toggle-icon .bar:nth-of-type(2) {
-          margin-left: 0.5em;
           -webkit-transform: rotate(-42deg) translateY(-0.125rem);
-          transform: rotate(-42deg) translateY(-0.125rem); }
+          transform: rotate(-42deg) translateY(-0.125rem);
+          margin-left: 0.5rem; }
   .content-wrapper .movie-info {
-    overflow-y: scroll;
+    padding: 0 1.25rem;
     height: 100%;
-    padding: 0 1.25rem; }
+    overflow-y: scroll; }
     .content-wrapper .movie-info .movie-title {
-      color: #ffffff;
+      margin-bottom: 0;
       text-transform: uppercase;
-      margin-bottom: 0; }
+      color: #ffffff; }
     .content-wrapper .movie-info .movie-episode {
       margin-bottom: 0.9375rem; }
     .content-wrapper .movie-info .movie-poster {
-      max-width: 15.625rem;
-      margin: 0 auto;
       display: block;
-      margin-bottom: 0.9375rem; }
-
-.styleguide {
-  margin: 5rem 0; }
-  .styleguide .container {
-    padding: 0 9.375rem; }
-  .styleguide .sg-section {
-    margin-bottom: 3.125rem; }
-
-.sg-title {
-  margin-bottom: 2.5rem;
-  border-bottom: 1px solid #3c3c3c;
-  padding-bottom: 1.25rem;
-  text-transform: uppercase; }
-
-.sg-table {
-  margin: 0 auto;
-  width: 900px;
-  line-height: 3rem; }
-  .sg-table thead {
-    text-align: left;
-    text-transform: uppercase;
-    font-family: "Roboto", Arial, sans-serif; }
-  .sg-table td {
-    border-bottom: 1px solid #d2d2d2; }
-  .sg-table .font-info.primary td {
-    font-family: "Roboto", Arial, sans-serif !important; }
-  .sg-table .font-info.secondary td {
-    font-family: "Roboto", Arial, sans-serif !important; }
-
-.sg-bg-dark {
-  background-color: #101010;
-  padding: 1.875rem; }
-
-.colors-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap; }
-
-.color-info {
-  display: inline-block; }
-  .color-info p {
-    margin: 0;
-    text-align: center;
-    text-transform: uppercase;
-    line-height: 1.5rem;
-    color: #3c3c3c;
-    font-family: "Roboto", Arial, sans-serif; }
-  .color-info .name {
-    color: #101010;
-    font-weight: 700; }
-  .color-info .scss {
-    text-transform: none; }
-
-.color-info {
-  display: none;
-  font-family: sans-serif; }
-
-.color-info:nth-child(1) {
-  display: inline-block;
-  margin-bottom: 3.125rem;
-  padding-right: 0.9375rem; }
-  .color-info:nth-child(1) .color {
-    display: inline-block;
-    margin-bottom: 1rem;
-    background: #000000;
-    padding: 1.5rem;
-    width: 12.5rem;
-    height: 3.75rem;
-    text-align: center; }
-  .color-info:nth-child(1) .name::after {
-    content: "black"; }
-  .color-info:nth-child(1) .hex::after {
-    content: "#000000"; }
-  .color-info:nth-child(1) .scss::after {
-    content: "$" "black"; }
-  .color-info:nth-child(1) .rgb::after {
-    text-transform: none;
-    content: "rgb(0, 0, 0)"; }
-
-.color-info:nth-child(2) {
-  display: inline-block;
-  margin-bottom: 3.125rem;
-  padding-right: 0.9375rem; }
-  .color-info:nth-child(2) .color {
-    display: inline-block;
-    margin-bottom: 1rem;
-    background: #101010;
-    padding: 1.5rem;
-    width: 12.5rem;
-    height: 3.75rem;
-    text-align: center; }
-  .color-info:nth-child(2) .name::after {
-    content: "grey-900"; }
-  .color-info:nth-child(2) .hex::after {
-    content: "#101010"; }
-  .color-info:nth-child(2) .scss::after {
-    content: "$" "grey-900"; }
-  .color-info:nth-child(2) .rgb::after {
-    text-transform: none;
-    content: "rgb(16, 16, 16)"; }
-
-.color-info:nth-child(3) {
-  display: inline-block;
-  margin-bottom: 3.125rem;
-  padding-right: 0.9375rem; }
-  .color-info:nth-child(3) .color {
-    display: inline-block;
-    margin-bottom: 1rem;
-    background: #3c3c3c;
-    padding: 1.5rem;
-    width: 12.5rem;
-    height: 3.75rem;
-    text-align: center; }
-  .color-info:nth-child(3) .name::after {
-    content: "grey-700"; }
-  .color-info:nth-child(3) .hex::after {
-    content: "#3c3c3c"; }
-  .color-info:nth-child(3) .scss::after {
-    content: "$" "grey-700"; }
-  .color-info:nth-child(3) .rgb::after {
-    text-transform: none;
-    content: "rgb(60, 60, 60)"; }
-
-.color-info:nth-child(4) {
-  display: inline-block;
-  margin-bottom: 3.125rem;
-  padding-right: 0.9375rem; }
-  .color-info:nth-child(4) .color {
-    display: inline-block;
-    margin-bottom: 1rem;
-    background: #7e7e7e;
-    padding: 1.5rem;
-    width: 12.5rem;
-    height: 3.75rem;
-    text-align: center; }
-  .color-info:nth-child(4) .name::after {
-    content: "grey-500"; }
-  .color-info:nth-child(4) .hex::after {
-    content: "#7e7e7e"; }
-  .color-info:nth-child(4) .scss::after {
-    content: "$" "grey-500"; }
-  .color-info:nth-child(4) .rgb::after {
-    text-transform: none;
-    content: "rgb(126, 126, 126)"; }
-
-.color-info:nth-child(5) {
-  display: inline-block;
-  margin-bottom: 3.125rem;
-  padding-right: 0.9375rem; }
-  .color-info:nth-child(5) .color {
-    display: inline-block;
-    margin-bottom: 1rem;
-    background: #d2d2d2;
-    padding: 1.5rem;
-    width: 12.5rem;
-    height: 3.75rem;
-    text-align: center; }
-  .color-info:nth-child(5) .name::after {
-    content: "grey-300"; }
-  .color-info:nth-child(5) .hex::after {
-    content: "#d2d2d2"; }
-  .color-info:nth-child(5) .scss::after {
-    content: "$" "grey-300"; }
-  .color-info:nth-child(5) .rgb::after {
-    text-transform: none;
-    content: "rgb(210, 210, 210)"; }
-
-.color-info:nth-child(6) {
-  display: inline-block;
-  margin-bottom: 3.125rem;
-  padding-right: 0.9375rem; }
-  .color-info:nth-child(6) .color {
-    display: inline-block;
-    margin-bottom: 1rem;
-    background: #f5f5f5;
-    padding: 1.5rem;
-    width: 12.5rem;
-    height: 3.75rem;
-    text-align: center;
-    border: 0.0625rem solid #d2d2d2; }
-  .color-info:nth-child(6) .name::after {
-    content: "off-white"; }
-  .color-info:nth-child(6) .hex::after {
-    content: "#f5f5f5"; }
-  .color-info:nth-child(6) .scss::after {
-    content: "$" "off-white"; }
-  .color-info:nth-child(6) .rgb::after {
-    text-transform: none;
-    content: "rgb(245, 245, 245)"; }
-
-.color-info:nth-child(7) {
-  display: inline-block;
-  margin-bottom: 3.125rem;
-  padding-right: 0.9375rem; }
-  .color-info:nth-child(7) .color {
-    display: inline-block;
-    margin-bottom: 1rem;
-    background: #ffffff;
-    padding: 1.5rem;
-    width: 12.5rem;
-    height: 3.75rem;
-    text-align: center;
-    border: 0.0625rem solid #d2d2d2; }
-  .color-info:nth-child(7) .name::after {
-    content: "white"; }
-  .color-info:nth-child(7) .hex::after {
-    content: "#ffffff"; }
-  .color-info:nth-child(7) .scss::after {
-    content: "$" "white"; }
-  .color-info:nth-child(7) .rgb::after {
-    text-transform: none;
-    content: "rgb(255, 255, 255)"; }
-
-.color-info:nth-child(8) {
-  display: inline-block;
-  margin-bottom: 3.125rem;
-  padding-right: 0.9375rem; }
-  .color-info:nth-child(8) .color {
-    display: inline-block;
-    margin-bottom: 1rem;
-    background: #cd282c;
-    padding: 1.5rem;
-    width: 12.5rem;
-    height: 3.75rem;
-    text-align: center; }
-  .color-info:nth-child(8) .name::after {
-    content: "red"; }
-  .color-info:nth-child(8) .hex::after {
-    content: "#cd282c"; }
-  .color-info:nth-child(8) .scss::after {
-    content: "$" "red"; }
-  .color-info:nth-child(8) .rgb::after {
-    text-transform: none;
-    content: "rgb(205, 40, 44)"; }
-
-.bg-white {
-  background-color: white; }
-
-.bg-dark {
-  background-color: black; }
+      margin: 0 auto;
+      margin-bottom: 0.9375rem;
+      max-width: 15.625rem; }
